--- a/wechat/src/main/webapp/WEB-INF/view/bind/input.html
+++ b/wechat/src/main/webapp/WEB-INF/view/bind/input.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="input-div" id="sjhm_div">
                     <label for="wechatPhone">手机号码</label>
-                    <input id="wechatPhone" type="text" name="wechatPhone" />
+                    <input id="wechatPhone" type="number" name="wechatPhone" />
                 </div>
                 <!-- <div class="input-div v">
                     <label for="wechatVerify" class="ls3">验证码</label>
