--- a/wechat/.settings/org.eclipse.wst.common.component
+++ b/wechat/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="wechat">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
@@ -7,6 +6,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="mybatis-3.2.8.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mybatis/mybatis">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="wechat"/>
         <property name="java-output-path" value="/wechat/target/classes"/>
     </wb-module>
